Fix the scala tests