@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wherobots</groupId>
-    <artifactId>sedonadb-example</artifactId>
+    <artifactId>wherobotsdb-example</artifactId>
     <version>0.0.1</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -11,16 +11,37 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <dependency.scope>provided</dependency.scope>
-        <geotoolswrapper.version>1.6.0-28.2</geotoolswrapper.version>
-        <geotools.scope>compile</geotools.scope>
-        <jts.version>1.19.0</jts.version>
-        <jts2geojson.version>0.14.3</jts2geojson.version>
-        <spark.version>3.5.3</spark.version>
+        <dependency.scope>test</dependency.scope>
+        <geotoolswrapper.version>1.8.0-33.1</geotoolswrapper.version>
+        <spark.version>3.5.5</spark.version>
         <spark.compat.version>3.5</spark.compat.version>
-        <scala.compat.version>2.12</scala.compat.version>
-        <sedona.version>1.5.0</sedona.version>
+        <scala.version>2.13.10</scala.version>
+        <scala.compat.version>2.13</scala.compat.version>
+        <scala-collection-compat.version>2.5.0</scala-collection-compat.version>
+        <scalatest.version>3.1.1</scalatest.version>
+        <wherobots-compute.version>1.9.0</wherobots-compute.version>
+        <wherobots-tools.version>1.8.4</wherobots-tools.version>
+        <wherobots-iceberg.version>1.9.2</wherobots-iceberg.version>
         <hadoop.version>3.3.4</hadoop.version>
+        <!-- For JDK-17 test -->
+        <extraJavaTestArgs>
+            -XX:+IgnoreUnrecognizedVMOptions
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens=java.base/java.net=ALL-UNNAMED
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+            --add-opens=java.base/sun.security.action=ALL-UNNAMED
+            --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+            --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED
+            -Djdk.reflect.useDirectMethodHandle=false
+        </extraJavaTestArgs>
     </properties>
 
     <dependencies>
@@ -38,20 +59,20 @@
         </dependency>
         <dependency>
             <groupId>com.wherobots</groupId>
-            <artifactId>sedona-spark-shaded-${spark.compat.version}_${scala.compat.version}</artifactId>
-            <version>${sedona.version}</version>
+            <artifactId>sedona-spark-${spark.compat.version}_${scala.compat.version}</artifactId>
+            <version>${wherobots-compute.version}</version>
             <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>com.wherobots.havasu</groupId>
             <artifactId>iceberg-spark-runtime-${spark.compat.version}_${scala.compat.version}</artifactId>
-            <version>${sedona.version}</version>
+            <version>${wherobots-iceberg.version}</version>
             <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>com.wherobots</groupId>
             <artifactId>wherobots-tools-core</artifactId>
-            <version>${sedona.version}</version>
+            <version>${wherobots-tools.version}</version>
             <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
@@ -66,17 +87,51 @@
             <version>${hadoop.version}</version>
             <scope>${dependency.scope}</scope>
         </dependency>
+        <!-- Add AWS SDK for Java -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.362</version>
+            <scope>${dependency.scope}</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.compat.version}</artifactId>
+            <version>${scalatest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-collection-compat_${scala.compat.version}</artifactId>
+            <version>${scala-collection-compat.version}</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
             <id>wherobots-repo</id>
             <url>file:///opt/wherobots/repository</url>
+        </repository>
+        <repository>
+            <id>github</id>
+            <name>Wherobots internal Apache Maven Packages on GitHub</name>
+            <url>https://maven.pkg.github.com/wherobots/packages</url>
         </repository>
         <repository>
             <id>maven-central</id>
@@ -109,48 +164,52 @@
     </repositories>
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
+        <testSourceDirectory>src/test/scala</testSourceDirectory>
         <plugins>
             <plugin>
-                    <groupId>net.alchim31.maven</groupId>
-                    <artifactId>scala-maven-plugin</artifactId>
-                    <version>3.2.1</version>
-                    <executions>
-                        <execution>
-                            <id>scala-compile-first</id>
-                            <phase>process-resources</phase>
-                            <goals>
-                                <goal>add-source</goal>
-                                <goal>compile</goal>
-                            </goals>
-                            <configuration>
-                                <args>
-                                    <arg>-dependencyfile</arg>
-                                    <arg>${project.build.directory}/.scala_dependencies</arg>
-                                </args>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>scala-test-compile</id>
-                            <phase>process-test-resources</phase>
-                            <goals>
-                                <goal>testCompile</goal>
-                            </goals>
-                            <configuration>
-                                <args>
-                                    <arg>-dependencyfile</arg>
-                                    <arg>${project.build.directory}/.scala_dependencies</arg>
-                                </args>
-                            </configuration>
-                        </execution>
-                    </executions>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>3.2.1</version>
+                <configuration>
+                    <scalaVersion>${scala.version}</scalaVersion>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <args>
+                                <arg>-dependencyfile</arg>
+                                <arg>${project.build.directory}/.scala_dependencies</arg>
+                            </args>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                        <configuration>
+                            <args>
+                                <arg>-dependencyfile</arg>
+                                <arg>${project.build.directory}/.scala_dependencies</arg>
+                            </args>
+                        </configuration>
+                    </execution>
+                </executions>
                 </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -176,6 +235,25 @@
                                 </filter>
                             </filters>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest-maven-plugin</artifactId>
+                <version>2.2.0</version>
+                <configuration>
+                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                    <junitxml>.</junitxml>
+                    <filereports>TestSuiteReport.txt</filereports>
+                    <argLine>${extraJavaTestArgs}</argLine>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>test</id>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
